--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bi bi-xbox"></i></div>
-              <h4 class="title"><a href="">BRAND</a></h4>
+              <h4 class="title"><a href="#services2">BRAND</a></h4>
               <p class="description"> Building brands with direcotion, energy
                 and momentum</p>
             </div>
@@ -95,7 +95,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bi bi-calendar2-range-fill"></i></div>
-              <h4 class="title"><a href=""> MARKETING            </a></h4>
+              <h4 class="title"><a href="#services4"> MARKETING            </a></h4>
               <p class="description">Eye-catching campaigns to boost your brand visibility and impact.
                 </p>
             </div>
@@ -104,7 +104,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="bi bi-collection-fill"></i></div>
-              <h4 class="title"><a href="">DIGITAL</a></h4>
+              <h4 class="title"><a href="#services1">DIGITAL</a></h4>
               <p class="description">Digital experiences that convert, engage, inspire, and drive customer loyalty.
               </p>
             </div>
@@ -113,7 +113,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
               <div class="icon"><i class="bi bi-camera-reels-fill"></i></div>
-              <h4 class="title"><a href=""> VIDEO/3D</a></h4>
+              <h4 class="title"><a href="#services3"> VIDEO/3D</a></h4>
               <p class="description">Engaging content that finds the
                 meaningful difference</p>
             </div>
@@ -364,14 +364,14 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-video"></i></div>
-              <h4><a href="#services2">DIGITAL</a></h4>
+              <h4><a href="#services1">DIGITAL</a></h4>
               <p>Digital experiences that convert, engage, inspire, and drive customer loyalty.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-xbox"></i></i></div>
-              <h4><a href="#services3">BRAND</a></h4>
+              <h4><a href="#services2">BRAND</a></h4>
               <p>Building brands with clear direction, energy, and unstoppable momentum.</p>
             </div>
           </div>
@@ -385,7 +385,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"></div>
-              <h4><a href="#services4">
+              <h4><a href="#services3">
                 VIDEO/3D</a></h4>
               <p>Engaging content that finds and amplifies the meaningful difference.</p>
             </div>
