--- a/index.html
+++ b/index.html
@@ -1149,7 +1149,15 @@
               <a href="portfolio-karmaorganic.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
-
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="assets/img/portfolio/commonpeacock1.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Common Peacock</h4>
+              <p>App</p>
+              <a href="assets/img/portfolio/commonpeacock1.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-peacock.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <img src="assets/img/portfolio/shankar.png" class="img-fluid" alt="">
             <div class="portfolio-info">
